--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -41,7 +41,7 @@ body.lb-disable-scrolling {
 
 .lb-outerContainer {
   position: relative;
-  *zoom: 1;
+  zoom: 1;
   width: 250px;
   height: 250px;
   margin: 0 auto;
@@ -139,7 +139,7 @@ body.lb-disable-scrolling {
 .lb-dataContainer {
   margin: 0 auto;
   padding-top: 5px;
-  *zoom: 1;
+  zoom: 1;
   width: 100%;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -201,4 +201,16 @@ body.lb-disable-scrolling {
   cursor: pointer;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
+}
+
+@media screen and (min-width:601px) and (max-width:800px){
+  
+}
+
+@media screen and (min-width:801px) and (max-width:1140px){
+
+}
+
+@media screen and (min-width:1141px) and (max-width:1750px){
+  
 }
